--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.4'
 
 services:
   db:
@@ -10,10 +10,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: hot-reload
     restart: always
     expose:
       - 8080
     ports:
       - 8080:8080
+    volumes:
+      - ./:/app/
     links:
       - db
