--- a/fe/package.json
+++ b/fe/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build --public-url '.' src/index.html"
   },
   "author": "Miroslav Kravec",
   "license": "MIT",
