--- a/fe/package.json
+++ b/fe/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel serve --hmr-port 1235 src/index.html",
     "build": "parcel build --public-url '.' src/index.html"
   },
   "author": "Miroslav Kravec",
