--- a/fe/package.json
+++ b/fe/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
