--- a/fe/package.json
+++ b/fe/package.json
@@ -10,12 +10,14 @@
   "license": "MIT",
   "devDependencies": {
     "parcel-bundler": "^1.12.3",
+    "sass": "^1.21.0",
     "typescript": "^3.5.1"
   },
   "dependencies": {
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
