--- a/fe/package.json
+++ b/fe/package.json
@@ -9,11 +9,14 @@
   "author": "Miroslav Kravec",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "parcel-bundler": "^1.12.3",
     "sass": "^1.21.0",
     "typescript": "^3.5.1"
   },
   "dependencies": {
+    "@rematch/core": "^1.1.0",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "axios": "^0.19.0",
@@ -21,6 +24,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1"
   }
 }
