--- a/fe/package.json
+++ b/fe/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@rematch/core": "^1.1.0",
+    "@rematch/persist": "^1.1.6",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "axios": "^0.19.0",
@@ -25,6 +26,8 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0"
   }
 }
