--- a/fe/package.json
+++ b/fe/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
-    "redux-persist": "^5.10.0"
+    "redux-persist": "^5.10.0",
+    "revalidation": "^0.12.1"
   }
 }
