--- a/fe/package.json
+++ b/fe/package.json
@@ -22,13 +22,13 @@
     "@types/react-dom": "^16.8.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "formik": "^1.5.7",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
-    "redux-persist": "^5.10.0",
-    "revalidation": "^0.12.1"
+    "redux-persist": "^5.10.0"
   }
 }
